--- a/app/src/main/res/layout/schedule_select_client_text_distance.xml
+++ b/app/src/main/res/layout/schedule_select_client_text_distance.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/txt_title1"
+        android:id="@+id/txt_distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
