--- a/app/src/main/res/layout/fragment_schedule_timeline.xml
+++ b/app/src/main/res/layout/fragment_schedule_timeline.xml
@@ -16,7 +16,7 @@
             android:paddingBottom="5dp">
 
             <LinearLayout
-                android:id="@+id/week_tab"
+                android:id="@+id/all_tab"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
@@ -27,7 +27,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="THIS WEEK"
+                    android:text="ALL"
                     android:textColor="@color/semi_transparent_black"
                     android:layout_marginBottom="10dp"
                     android:textSize="12sp"
@@ -66,7 +66,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/next_week_tab"
+                android:id="@+id/this_week_tab"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="NEXT WEEK"
+                    android:text="THIS WEEK"
                     android:textColor="@color/semi_transparent_black"
                     android:layout_marginBottom="10dp"
                     android:textSize="12sp"
@@ -90,7 +90,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/month_tab"
+                android:id="@+id/next_week_tab"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
@@ -101,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="THIS MONTH"
+                    android:text="NEXT WEEK"
                     android:textColor="@color/semi_transparent_black"
                     android:layout_marginBottom="10dp"
                     android:textSize="12sp"
