--- a/app/src/main/res/drawable/schedule_you_confirm_cancel_border.xml
+++ b/app/src/main/res/drawable/schedule_you_confirm_cancel_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#064c78"
-        android:endColor="#2b7bd9"
-        android:angle="270" />
+    <corners android:radius="4dp" />
+
+    <stroke android:width="0.5dip" android:color="@color/button_bg" />
 </shape>
