--- a/app/src/main/res/layout/fragment_schedule_add_activity.xml
+++ b/app/src/main/res/layout/fragment_schedule_add_activity.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
         android:background="@color/schedule_title_bg_color">
 
         <TextView
