--- a/app/src/main/res/layout/schedule_list_item.xml
+++ b/app/src/main/res/layout/schedule_list_item.xml
@@ -9,8 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/time"
-        android:textColor="@color/schedule_title_bg_color"
-        android:text="All day"
+        android:text=""
+        android:padding="3dp"
+        android:textStyle="bold"
         android:textSize="12sp" />
 
     <LinearLayout
@@ -21,23 +22,15 @@
         android:paddingRight="5dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/color_symbol"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginTop="4dp"
-            android:src="@drawable/orange_dot" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/message"
             android:gravity="center_vertical"
-            android:text="Shaibu's Birthday 23rd June"
+            android:text=""
             android:textStyle="bold"
             android:textColor="@color/schedule_title_bg_color"
-            android:textSize="13sp" />
+            android:textSize="14sp" />
 
     </LinearLayout>
 
