--- a/app/src/main/res/layout/schedule_timeline_list_item.xml
+++ b/app/src/main/res/layout/schedule_timeline_list_item.xml
@@ -23,9 +23,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/day"
-                android:textColor="#1baf07"
+                android:textColor="#000000"
                 android:layout_gravity="center_horizontal"
-                android:text="18"
+                android:text=""
                 android:textStyle="bold"
                 android:textSize="20sp" />
 
@@ -35,7 +35,7 @@
                 android:id="@+id/week_day"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/schedule_title_bg_color"
-                android:text="TOMMOROW"
+                android:text=""
                 android:textSize="9sp" />
 
 
@@ -50,8 +50,6 @@
             android:layout_toLeftOf="@+id/weather_info"
             android:paddingLeft="15dp"
             android:layout_toRightOf="@+id/date">
-
-
 
 
         </LinearLayout>
@@ -69,18 +67,19 @@
                 android:id="@+id/temperature"
                 android:gravity="center_vertical"
                 android:layout_marginRight="3dp"
-                android:text="72°"
+                android:text=""
                 android:textStyle="bold"
                 android:textColor="@color/schedule_title_bg_color"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/weather"
                 android:gravity="center_vertical"
-                android:text="Cloudy"
-                android:textColor="@color/semi_transparent_black"
+                android:text=""
+                android:layout_marginRight="10dp"
+                android:textColor="#8a8787"
                 android:textSize="10sp" />
 
         </LinearLayout>
