--- a/app/src/main/res/drawable/curve_white_background.xml
+++ b/app/src/main/res/drawable/curve_white_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
-    <stroke android:width="1dip" android:color="@color/semi_transparent_black" />
+    <stroke android:width="0.5dip" android:color="@color/semi_transparent_black" />
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/white" />
 </shape>
