--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -66,7 +66,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/plus" />
+                android:src="@mipmap/plus_blue_background" />
         </LinearLayout>
 
         <LinearLayout
